# Desenvolvimento-Integrado-de-sistemas

./: .gitignore  Cargo.toml  client.py  main.py  matrix_converter.py  pyproject.toml  relatorio_reconstrucoes.csv  server.py  teste.py
src/: main.rs
