[package]
name = "Desenvolvimento-Integrado-de-sistemas"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
poem = "3.1.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
