[package]
name = "Desenvolvimento-Integrado-de-sistemas"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
poem = "3.1.12"
sprs = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "net", "signal"] }
bytes = "1"
num_cpus = "1"
zip = "2"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true