[project]
name = "desenvolvimento-integrado-de-sistemas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "orjson>=3.11.9",
    "pandas>=3.0.1",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "uvicorn>=0.44.0",
]
